Update design: switch gold to neutral blue and add nav effects

--- a/public/success.html
+++ b/public/success.html
@@ -41,8 +41,8 @@
         .icon-circle {
             width: 80px;
             height: 80px;
-            background: #dcfce7;
-            color: #16a34a;
+            background: #dbeafe;
+            color: #2563eb;
             border-radius: 50%;
             display: flex;
             align-items: center;
