Fix: Binary file uploads for Netlify and prevent accidental Enter submission

--- a/public/forms.html
+++ b/public/forms.html
@@ -8,7 +8,7 @@
 
 <body>
     <!-- Este archivo es invisible para el usuario pero permite que Netlify detecte el formulario -->
-    <form name="tramite-licencia" data-netlify="true" hidden>
+    <form name="tramite-licencia" data-netlify="true" enctype="multipart/form-data" hidden>
         <input type="text" name="nombreCompleto" />
         <input type="text" name="paisNacimiento" />
         <input type="text" name="paisResidencia" />
