Add: Date of Birth field to application form

--- a/public/forms.html
+++ b/public/forms.html
@@ -11,6 +11,7 @@
     <form name="tramite-licencia" data-netlify="true" enctype="multipart/form-data" hidden>
         <input type="text" name="nombreCompleto" />
         <input type="text" name="paisNacimiento" />
+        <input type="date" name="fechaNacimiento" />
         <input type="text" name="paisResidencia" />
         <select name="vigencia">
             <option value="1 year"></option>
