--- a/public/forms.html
+++ b/public/forms.html
@@ -8,7 +8,11 @@
 
 <body>
     <!-- Este archivo es invisible para el usuario pero permite que Netlify detecte el formulario -->
+    <!-- Es crucial que este archivo esté en la carpeta public y que los nombres de los campos coincidan -->
     <form name="tramite-licencia" data-netlify="true" enctype="multipart/form-data" hidden>
+        <input type="hidden" name="form-name" value="tramite-licencia" />
+
+        <!-- Paso 1 -->
         <input type="text" name="nombreCompleto" />
         <input type="text" name="paisNacimiento" />
         <input type="date" name="fechaNacimiento" />
@@ -18,13 +22,28 @@
             <option value="2 years"></option>
             <option value="5 years"></option>
         </select>
+
+        <!-- Paso 2 -->
         <input type="text" name="estatura" />
-        <select name="tipoSangre"></select>
+        <select name="tipoSangre">
+            <option value="O+"></option>
+            <option value="O-"></option>
+            <option value="A+"></option>
+            <option value="A-"></option>
+            <option value="B+"></option>
+            <option value="B-"></option>
+            <option value="AB+"></option>
+            <option value="AB-"></option>
+        </select>
         <input type="text" name="colorOjos" />
+
+        <!-- Paso 3 -->
         <input type="file" name="fotoCarnet" />
         <input type="file" name="fotoFirma" />
         <input type="file" name="fotoID" />
         <input type="file" name="fotoLicencia" />
+
+        <!-- Paso 4 -->
         <input type="email" name="email" />
         <input type="tel" name="telefono" />
     </form>
